--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,6 +142,11 @@ ul li {
   margin: 0 auto; 
 }
 
+.margin-top-bottom {
+margin-top: 29px;
+margin-bottom: 22px;
+}
+
 /* 
 
 ====== Zoom effect ======
